Добавил больше функционала командным блокам!